View Issue Details

IDProjectCategoryView StatusLast Update
0023876Open CASCADEOCCT:Modeling Algorithmspublic2013-04-29 15:24
ReporteremvAssigned Toomy 
PriorityurgentSeverityminor 
Status closedResolutionfixed 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023876: New Boolean Operation algorithm works incorrect with cylinder made by revolution and torus.
DescriptionNew Boolean Operation algorithm works incorrect with cylinder made by revolution and torus.
The problem has been detected in the test case bugs modalg_4 bug827.
Steps To Reproducevertex v1 10 0 0
vertex v2 20 0 0
vertex v3 10 0 50
vertex v4 20 0 50
edge e1 v1 v3
edge e2 v3 v4
edge e3 v2 v4
edge e4 v2 v1
wire w e1 e2 e3 e4
mkplane f w
revol b1 f 0 0 0 0 0 1 360
don b1
ptorus b2 15 5
ttranslate b2 0 0 50
bop b1 b2
bopcommon r
don r
Additional information
and documentation updates
Changes:
 class BOPTools_AlgoTools3D;

 function:
 void DoSplitSEAMOnFace (const TopoDS_Edge& aSplit,
                         const TopoDS_Face& aF)

 Added treatment for surfaces periodic in the V parametric direction.
TagsNo tags attached.
Test case numberbugs modalg_5 bug23876

Activities

emv

2013-04-09 09:01

developer   ~0024032

Git branch CR23876 is ready to be reviewed.

apn

2013-04-10 17:39

administrator   ~0024079

Dear BugMaster,

Branch CR23876 (and products from GIT master) was compiled on Linux and Windows platforms and tested without rebase.
SHA-1: 93d57e876c0cab918db78cd4c78e8502988372f5

Number of compiler warnings:

occt component:
Linux: 3 (3 on master)
Windows: 11 (11 on master)

products component:
Linux: 0 (0 on master)
Windows: 50 (50 on master)

Regressions:
No regressions

Improvements:
bugs modalg_2 bug5805_41 (expected problem TODO no. 3 is not detected)
test case was modofied and pushed to branch

Test case:
bugs modalg_5 bug23876 - OK

Testing on Linux:
Total MEMORY difference: 244286732 / 244808144
Total CPU difference: 11741.980000000118 / 19941.609999999735

Testing on Windows:
Total MEMORY difference: 353951156 / 355532208
Total CPU difference: 22383.078125 / 20725.90625

There are not serious differences in images found by testdiff.

Related Changesets

occt: master fe343049

2013-04-12 09:26:04

omy

Details Diff
0023876: New Boolean Operation algorithm works incorrect with cylinder made by revolution and torus.
Added treatment for surfaces periodic in the V parametric direction.
Added test case bugs modalg_5/bug23876
Affected Issues
0023876
mod - src/BOPTools/BOPTools_AlgoTools3D.cxx Diff File
mod - tests/bugs/modalg_2/bug5805_41 Diff File
add - tests/bugs/modalg_5/bug23876 Diff File

Issue History

Date Modified Username Field Change
2013-04-05 12:13 emv New Issue
2013-04-05 12:13 emv Assigned To => emv
2013-04-05 12:13 emv Status new => assigned
2013-04-05 12:13 emv Description Updated
2013-04-09 09:01 emv Note Added: 0024032
2013-04-09 09:01 emv Assigned To emv => pkv
2013-04-09 09:01 emv Status assigned => resolved
2013-04-09 09:01 emv Additional Information Updated
2013-04-09 09:08 pkv Assigned To pkv => mkv
2013-04-09 09:08 pkv Status resolved => reviewed
2013-04-09 10:27 apn Assigned To mkv => apn
2013-04-09 16:32 abv Priority normal => urgent
2013-04-09 16:32 abv Target Version => 6.6.0
2013-04-09 16:36 apn Test case number => bugs modalg_5 bug23876
2013-04-10 17:39 apn Note Added: 0024079
2013-04-10 17:40 apn Assigned To apn => bugmaster
2013-04-10 17:40 apn Status reviewed => tested
2013-04-15 17:59 omy Changeset attached => occt master fe343049
2013-04-15 17:59 omy Assigned To bugmaster => omy
2013-04-15 17:59 omy Status tested => verified
2013-04-15 17:59 omy Resolution open => fixed
2013-04-23 13:35 aiv Status verified => closed
2013-04-29 15:24 aiv Fixed in Version => 6.6.0