0023876: New Boolean Operation algorithm works incorrect with cylinder made by revolution and torus. Added treatment for surfaces periodic in the V parametric direction. Added test case bugs modalg_5/bug23876